[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pixel Art/Boutons/Mine/Normal.png" type="Texture" id=2]
[ext_resource path="res://Assets/Pixel Art/Boutons/Mine/Hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Pixel Art/Boutons/Warehouse/Normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixel Art/Boutons/Warehouse/Hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Pixel Art/Boutons/Generator/Normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Pixel Art/Boutons/Generator/Hover.png" type="Texture" id=7]
[ext_resource path="res://Assets/Pixel Art/Boutons/Labo/Normal.png" type="Texture" id=8]
[ext_resource path="res://Assets/Pixel Art/Boutons/Labo/Hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/Pixel Art/Boutons/Mur/Normal.png" type="Texture" id=10]
[ext_resource path="res://Assets/Pixel Art/Boutons/Mur/Hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/Pixel Art/Boutons/Turret/Normal.png" type="Texture" id=12]
[ext_resource path="res://Assets/Pixel Art/Boutons/Turret/Hover.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pixel Art/Boutons/Rocket/Normal.png" type="Texture" id=14]
[ext_resource path="res://Assets/Pixel Art/Boutons/Rocket/Hover.png" type="Texture" id=15]
[ext_resource path="res://Assets/Pixel Art/Boutons/Icone vide.png" type="Texture" id=16]
[ext_resource path="res://Cave-Story.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Assets/Pixel Art/Icones/Icone minerai alpha.png" type="Texture" id=18]
[ext_resource path="res://Assets/Pixel Art/Icones/Icone energie alpha.png" type="Texture" id=19]

[sub_resource type="InputEventMouseButton" id=1]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
button_mask = 0
position = Vector2( 0, 0 )
global_position = Vector2( 0, 0 )
factor = 1.0
button_index = 0
pressed = true
doubleclick = false

[sub_resource type="ShortCut" id=2]

shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 17 )
_sections_unfolded = [ "Font" ]

[node name="UI" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="BatimentsContainrer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 850.0
margin_right = 1920.0
margin_bottom = 1101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="Mine" type="TextureButton" parent="BatimentsContainrer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 236.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures", "Theme" ]

[node name="Warehouse" type="TextureButton" parent="BatimentsContainrer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 476.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="Generator" type="TextureButton" parent="BatimentsContainrer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_right = 716.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Laboratory" type="TextureButton" parent="BatimentsContainrer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_right = 956.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 2 )
group = null
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Wall" type="TextureButton" parent="BatimentsContainrer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 960.0
margin_right = 1196.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Turret" type="TextureButton" parent="BatimentsContainrer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1200.0
margin_right = 1436.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="Rocket" type="TextureButton" parent="BatimentsContainrer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1440.0
margin_right = 1676.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="TextureRect" type="TextureRect" parent="BatimentsContainrer" index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1680.0
margin_right = 1916.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 16 )
stretch_mode = 0

[node name="RessourcesContainer" type="VBoxContainer" parent="BatimentsContainrer/TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 34.0
margin_right = 227.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="Minerals" type="Label" parent="BatimentsContainrer/TextureRect/RessourcesContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 216.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 9
size_flags_vertical = 12
custom_fonts/font = SubResource( 3 )
text = "Minerals"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="CenterContainer" type="CenterContainer" parent="BatimentsContainrer/TextureRect/RessourcesContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 35.0
margin_right = 216.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="MineraiContainer" type="HBoxContainer" parent="BatimentsContainrer/TextureRect/RessourcesContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_right = 201.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="XXXX" type="Label" parent="BatimentsContainrer/TextureRect/RessourcesContainer/CenterContainer/MineraiContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "XXXX / XXXX"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="MineraiText" type="TextureRect" parent="BatimentsContainrer/TextureRect/RessourcesContainer/CenterContainer/MineraiContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_right = 186.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
texture = ExtResource( 18 )
stretch_mode = 4
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="Energie" type="Label" parent="BatimentsContainrer/TextureRect/RessourcesContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 82.0
margin_right = 216.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Energy"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="CenterContainer2" type="CenterContainer" parent="BatimentsContainrer/TextureRect/RessourcesContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 117.0
margin_right = 216.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="EnergyContainer" type="HBoxContainer" parent="BatimentsContainrer/TextureRect/RessourcesContainer/CenterContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_right = 201.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="XXXX" type="Label" parent="BatimentsContainrer/TextureRect/RessourcesContainer/CenterContainer2/EnergyContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "XXXX / XXXX"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="EnergyText" type="TextureRect" parent="BatimentsContainrer/TextureRect/RessourcesContainer/CenterContainer2/EnergyContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_right = 186.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 19 )
stretch_mode = 0

[node name="TimerContainer" type="CenterContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="TimerContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 877.0
margin_top = 23.0
margin_right = 1043.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Remaining time" type="Label" parent="TimerContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 166.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Remaining time"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Time" type="Label" parent="TimerContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 166.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "9999 : 9999"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="BatimentsContainrer/Mine" to="." method="_on_Mine_pressed"]

[connection signal="pressed" from="BatimentsContainrer/Warehouse" to="." method="_on_Warehouse_pressed"]

[connection signal="pressed" from="BatimentsContainrer/Generator" to="." method="_on_Generator_pressed"]

[connection signal="pressed" from="BatimentsContainrer/Laboratory" to="." method="_on_Laboratory_pressed"]


